# pyatorka

./: CNAME  Cargo.toml  README.md  build.rs  index.html
src/: diff.rs  encoding.rs  geometry.rs  i18n.rs  main.rs  style.rs
