[package]
name = "pyatorka"
version = "1.0.0"
edition = "2024"
description = "Пятёрка — просмотрщик наложения DXF-файлов"
authors = ["Rafych"]

[dependencies]
eframe = { version = "0.27", features = ["persistence"] }
egui = "0.27"
dxf = "0.5"
rfd = "0.14"
# Используется для автоопределения кодировки текста в теле DXF-файла
# (интерпретация $DWGCODEPAGE, определение Shift_JIS и т.п.)
encoding_rs = "0.8"
chardetng = "0.1"
serde = { version = "1", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png"] }

# Используется для встраивания значка самого исполняемого файла Windows
# (отображается в проводнике). На сборку под другие платформы не влияет.
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# Настройки релизной сборки: единый бинарник, максимальная оптимизация
[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

